Fix text positioning on mobile devices

--- a/frontend/src/components/PersonDetailsSubpage/ProductionSmallWide/ProductionSmallWide.scss
+++ b/frontend/src/components/PersonDetailsSubpage/ProductionSmallWide/ProductionSmallWide.scss
@@ -52,3 +52,18 @@
   }
 
 }
+
+@media (max-width: "991px") {
+
+  .production-small-wide-wrapper .info-wrapper {
+
+    .title {
+      min-width: 100%;
+    }
+
+    .description {
+      padding-left: 0px;
+    }
+
+  }
+}
